added cards :: Index + component

--- a/src/index.html
+++ b/src/index.html
@@ -12,15 +12,95 @@
 <body class="container">
 
     <h1><i class="fa fa-home"></i> index.html</h1>
+    <br />
+
+    <section>
+        <h2>Card Status</h2>
+
+        <div class="row">
+            <div class="col">
+                <div class="cs-card-status">
+                    <div class="cs-card cs-bg-cyan">
+                        <b>Title</b>
+                        <hr />
+                        <p class="text-center">
+                            <button class="btn btn-primary btn-lg">
+                                Go <i class="fa fa-chevron-right"></i>
+                            </button>
+                        </p>
+                    </div>
+                    <div class="cs-card text-center">
+                        <h2>325,00 <small>$</small></h2>
+                        <p>
+                            30-Mai-2020
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card-status">
+                    <div class="cs-card cs-bg-cyan">
+                        <i class="fa fa-bar-chart"></i>
+                        <b>Title with icon</b>
+                        <hr />
+                    </div>
+                    <div class="cs-card text-center">
+                        <h2>15 <small class="cs-text-green"><i class="fa fa-arrow-up"></i></small></h2>
+                        <span>Requirements</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card-status">
+                    <div class="cs-card cs-bg-cyan">
+                        Options
+                        <table class="table table-sm table-condensed">
+                            <tbody>
+                                <tr>
+                                    <td>15.6</td>
+                                    <td>Lorem ipsum</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-danger">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>15.6</td>
+                                    <td>Lorem ipsum</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-danger">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>15.6</td>
+                                    <td>Lorem ipsum</td>
+                                    <td>
+                                        <button class="btn btn-sm btn-danger">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="cs-card text-center">
+                        <h2>65 <small class="cs-text-red"><i class="fa fa-arrow-down"></i></small></h2>
+                        <span>Avaiability</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr />
 
     <section>
         <h2>
-            <span class="cs-text-green">C</span>
-            <span class="cs-text-purple">o</span>
-            <span class="cs-text-cyan">l</span>
-            <span class="cs-text-orange">o</span>
-            <span class="cs-text-red">r</span>
-            <span class="cs-text-grey">s</span>
+            <span class="cs-text-green">C</span><span class="cs-text-purple">o</span><span
+                class="cs-text-cyan">l</span><span class="cs-text-orange">o</span><span
+                class="cs-text-red">r</span><span class="cs-text-grey">s</span>
         </h2>
 
         <p>
