--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                         <b>Title</b>
                         <hr />
                         <p class="text-center">
-                            <button class="btn btn-lg btn-outline-primary outline-inverse">
+                            <button class="btn btn-lg btn-outline-primary cs-outline-inverse">
                                 Go <i class="fa fa-chevron-right"></i>
                             </button>
                         </p>
