--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,35 @@
     <br />
 
     <section>
+        <h2>Buttons</h2>
+
+        <p>
+            <button class="btn btn-primary">Primary</button>
+            <button class="btn btn-secondary">Secondary</button>
+            <button class="btn btn-success">Success</button>
+            <button class="btn btn-danger">Danger</button>
+            <button class="btn btn-warning">Warning</button>
+            <button class="btn btn-info">Info</button>
+            <button class="btn btn-dark">Dark</button>
+            <button class="btn btn-light">Light</button>
+            <button class="btn btn-link">Link</button>
+        </p>
+        <p>
+            <button class="btn btn-primary" disabled>Primary</button>
+            <button class="btn btn-secondary" disabled>Secondary</button>
+            <button class="btn btn-success" disabled>Success</button>
+            <button class="btn btn-danger" disabled>Danger</button>
+            <button class="btn btn-warning" disabled>Warning</button>
+            <button class="btn btn-info" disabled>Info</button>
+            <button class="btn btn-dark" disabled>Dark</button>
+            <button class="btn btn-light" disabled>Light</button>
+            <button class="btn btn-link" disabled>Link</button>
+        </p>
+        
+    </section>
+    <hr />
+
+    <section>
         <h2>Card Status</h2>
 
         <div class="row">
@@ -30,9 +59,11 @@
                         </p>
                     </div>
                     <div class="cs-card text-center">
-                        <h2>325,00 <small>$</small></h2>
+                        <h2>325,00
+                            <small>$</small>
+                        </h2>
                         <p>
-                            30-Mai-2020
+                            May-30-2020
                         </p>
                     </div>
                 </div>
@@ -87,7 +118,9 @@
                         </table>
                     </div>
                     <div class="cs-card text-center">
-                        <h2>65 <small class="cs-text-red"><i class="fa fa-arrow-down"></i></small></h2>
+                        <h2>65
+                            <small>%</small>
+                            <small class="cs-text-red"><i class="fa fa-arrow-down"></i></small></h2>
                         <span>Avaiability</span>
                     </div>
                 </div>
