--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
         <h2>Buttons</h2>
 
         <p>
+            <h4>Common</h4>
             <button class="btn btn-primary">Primary</button>
             <button class="btn btn-secondary">Secondary</button>
             <button class="btn btn-success">Success</button>
@@ -29,6 +30,30 @@
             <button class="btn btn-link">Link</button>
         </p>
         <p>
+            <h4>Outline</h4>
+            <button class="btn btn-outline-primary">Primary</button>
+            <button class="btn btn-outline-secondary">Secondary</button>
+            <button class="btn btn-outline-success">Success</button>
+            <button class="btn btn-outline-danger">Danger</button>
+            <button class="btn btn-outline-warning">Warning</button>
+            <button class="btn btn-outline-info">Info</button>
+            <button class="btn btn-outline-dark">Dark</button>
+            <button class="btn btn-outline-light">Light</button>
+        </p>
+        <p>
+            <h4>Stripped</h4>
+            <button class="btn btn-primary cs-striped">Primary</button>
+            <button class="btn btn-secondary cs-striped">Secondary</button>
+            <button class="btn btn-success cs-striped">Success</button>
+            <button class="btn btn-danger cs-striped">Danger</button>
+            <button class="btn btn-warning cs-striped">Warning</button>
+            <button class="btn btn-info cs-striped">Info</button>
+            <button class="btn btn-dark cs-striped">Dark</button>
+            <button class="btn btn-light cs-striped">Light</button>
+            <button class="btn btn-link cs-striped">Link</button>
+        </p>
+        <p>
+            <h4>Disabled</h4>
             <button class="btn btn-primary" disabled>Primary</button>
             <button class="btn btn-secondary" disabled>Secondary</button>
             <button class="btn btn-success" disabled>Success</button>
