--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="../dist/conscientstyle.min.css">
+    <style>
+        section > div {
+            padding-left: 1.6em;
+        }
+    </style>
 </head>
 
 <body class="container">
@@ -17,7 +22,7 @@
     <section>
         <h2>Buttons</h2>
 
-        <p>
+        <div>
             <h4>Common</h4>
             <button class="btn btn-primary">Primary</button>
             <button class="btn btn-secondary">Secondary</button>
@@ -28,8 +33,14 @@
             <button class="btn btn-dark">Dark</button>
             <button class="btn btn-light">Light</button>
             <button class="btn btn-link">Link</button>
-        </p>
-        <p>
+        </div>
+        <div>
+            <h4>Sizes</h4>
+            <button class="btn btn-sm btn-primary">Primary</button>
+            <button class="btn btn-primary">Primary</button>
+            <button class="btn btn-lg btn-primary">Primary</button>
+        </div>
+        <div>
             <h4>Outline</h4>
             <button class="btn btn-outline-primary">Primary</button>
             <button class="btn btn-outline-secondary">Secondary</button>
@@ -39,8 +50,8 @@
             <button class="btn btn-outline-info">Info</button>
             <button class="btn btn-outline-dark">Dark</button>
             <button class="btn btn-outline-light">Light</button>
-        </p>
-        <p>
+        </div>
+        <div>
             <h4>Stripped</h4>
             <button class="btn btn-primary cs-striped">Primary</button>
             <button class="btn btn-secondary cs-striped">Secondary</button>
@@ -51,8 +62,8 @@
             <button class="btn btn-dark cs-striped">Dark</button>
             <button class="btn btn-light cs-striped">Light</button>
             <button class="btn btn-link cs-striped">Link</button>
-        </p>
-        <p>
+        </div>
+        <div>
             <h4>Disabled</h4>
             <button class="btn btn-primary" disabled>Primary</button>
             <button class="btn btn-secondary" disabled>Secondary</button>
@@ -63,7 +74,7 @@
             <button class="btn btn-dark" disabled>Dark</button>
             <button class="btn btn-light" disabled>Light</button>
             <button class="btn btn-link" disabled>Link</button>
-        </p>
+        </div>
         
     </section>
     <hr />
