--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="../dist/conscientstyle.min.css">
     <style>
-        section > div {
+        section>div {
             padding-left: 1.6em;
         }
     </style>
@@ -23,6 +23,12 @@
         <h2>Buttons</h2>
 
         <div>
+            <h4>Sizes</h4>
+            <button class="btn btn-sm btn-primary">Primary</button>
+            <button class="btn btn-primary">Primary</button>
+            <button class="btn btn-lg btn-primary">Primary</button>
+        </div>
+        <div>
             <h4>Common</h4>
             <button class="btn btn-primary">Primary</button>
             <button class="btn btn-secondary">Secondary</button>
@@ -33,12 +39,6 @@
             <button class="btn btn-dark">Dark</button>
             <button class="btn btn-light">Light</button>
             <button class="btn btn-link">Link</button>
-        </div>
-        <div>
-            <h4>Sizes</h4>
-            <button class="btn btn-sm btn-primary">Primary</button>
-            <button class="btn btn-primary">Primary</button>
-            <button class="btn btn-lg btn-primary">Primary</button>
         </div>
         <div>
             <h4>Outline</h4>
@@ -52,7 +52,7 @@
             <button class="btn btn-outline-light">Light</button>
         </div>
         <div>
-            <h4>Stripped</h4>
+            <h4>Striped</h4>
             <button class="btn btn-primary cs-striped">Primary</button>
             <button class="btn btn-secondary cs-striped">Secondary</button>
             <button class="btn btn-success cs-striped">Success</button>
@@ -75,7 +75,7 @@
             <button class="btn btn-light" disabled>Light</button>
             <button class="btn btn-link" disabled>Link</button>
         </div>
-        
+
     </section>
     <hr />
 
@@ -167,17 +167,58 @@
 
     <section>
         <h2>
-            <span class="cs-text-green">C</span><span class="cs-text-purple">o</span><span
-                class="cs-text-cyan">l</span><span class="cs-text-orange">o</span><span
-                class="cs-text-red">r</span><span class="cs-text-grey">s</span>
+            Text
         </h2>
 
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. <span class="cs-text-purple">Veritatis</span>
-            repudiandae exercitationem at <span class="cs-text-cyan">doloremque</span> architecto tempore numquam nisi
-            iusto dolore voluptatem doloribus corporis, vel ab odit <span class="cs-text-red">deserunt</span> laborum
-            veniam nostrum libero!
-        </p>
+        <div>
+            <h4>Sizes</h4>
+            <span class="cs-text-10">10px</span>
+            <span class="cs-text-12">12px</span>
+            <span class="cs-text-14">14px</span>
+            <span class="cs-text-16">16px</span>
+            <span class="cs-text-18">18px</span>
+            <span class="cs-text-20">20px</span>
+            <span class="cs-text-22">22px</span>
+            <span class="cs-text-24">24px</span>
+            <span class="cs-text-26">26px</span>
+            <span class="cs-text-30">30px</span>
+            <span class="cs-text-36">36px</span>
+            <span class="cs-text-42">42px</span>
+            <span class="cs-text-50">50px</span>
+            <span class="cs-text-60">60px</span>
+            <span class="cs-text-72">72px</span>
+        </div>
+
+        <div>
+            <h4>Colors</h4>
+            <span class="cs-text-26 cs-text-cyan">cyan</span>
+            <span class="cs-text-26 cs-text-pink">pink</span>
+            <span class="cs-text-26 cs-text-purple">purple</span>
+            <span class="cs-text-26 cs-text-green">green</span>
+            <span class="cs-text-26 cs-text-yellow">yellow</span>
+            <span class="cs-text-26 cs-text-orange">orange</span>
+            <span class="cs-text-26 cs-text-red">red</span>
+            <span class="cs-text-26 cs-text-grey">grey</span>
+            <span class="cs-text-26 cs-text-light-grey">light grey</span>
+        </div>
+        <div>
+            <h4>Rainbow Text</h4>
+
+            <p class="cs-text-rainbow">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis repudiandae exercitationem at
+                doloremque architecto tempore numquam nisi iusto dolore voluptatem doloribus corporis, vel ab odit
+                deserunt laborum veniam nostrum libero! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Veritatis repudiandae exercitationem at
+                doloremque architecto tempore numquam nisi iusto dolore voluptatem doloribus corporis, vel ab odit
+                deserunt laborum veniam nostrum libero! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Veritatis repudiandae exercitationem at
+                doloremque architecto tempore numquam nisi iusto dolore voluptatem doloribus corporis, vel ab odit
+                deserunt laborum veniam nostrum libero! Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Veritatis repudiandae exercitationem at
+                doloremque architecto tempore numquam nisi iusto dolore voluptatem doloribus corporis, vel ab odit
+                deserunt laborum veniam nostrum libero!
+            </p>
+        </div>
     </section>
     <hr />
 
