--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,6 @@
         <h2>Buttons</h2>
 
         <div>
-            <h4>Sizes</h4>
-            <button class="btn btn-sm btn-primary">Primary</button>
-            <button class="btn btn-primary">Primary</button>
-            <button class="btn btn-lg btn-primary">Primary</button>
-        </div>
-        <div>
-            <h4>Common</h4>
             <button class="btn btn-primary">Primary</button>
             <button class="btn btn-secondary">Secondary</button>
             <button class="btn btn-success">Success</button>
@@ -39,6 +32,12 @@
             <button class="btn btn-dark">Dark</button>
             <button class="btn btn-light">Light</button>
             <button class="btn btn-link">Link</button>
+        </div>
+        <div>
+            <h4>Sizes</h4>
+            <button class="btn btn-sm btn-primary">Primary</button>
+            <button class="btn btn-primary">Primary</button>
+            <button class="btn btn-lg btn-primary">Primary</button>
         </div>
         <div>
             <h4>Outline</h4>
@@ -61,7 +60,6 @@
             <button class="btn btn-info cs-striped">Info</button>
             <button class="btn btn-dark cs-striped">Dark</button>
             <button class="btn btn-light cs-striped">Light</button>
-            <button class="btn btn-link cs-striped">Link</button>
         </div>
         <div>
             <h4>Disabled</h4>
@@ -194,6 +192,7 @@
             <span class="cs-text-26 cs-text-cyan">cyan</span>
             <span class="cs-text-26 cs-text-pink">pink</span>
             <span class="cs-text-26 cs-text-purple">purple</span>
+            <span class="cs-text-26 cs-text-violet">violet</span>
             <span class="cs-text-26 cs-text-green">green</span>
             <span class="cs-text-26 cs-text-yellow">yellow</span>
             <span class="cs-text-26 cs-text-orange">orange</span>
@@ -202,7 +201,7 @@
             <span class="cs-text-26 cs-text-light-grey">light grey</span>
         </div>
         <div>
-            <h4>Rainbow Text</h4>
+            <h4>Rainbow</h4>
 
             <p class="cs-text-rainbow">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis repudiandae exercitationem at
