background colors & reordering

--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,69 @@
     <hr />
 
     <section>
+        <h2>Background Colors</h2>
+
+        <div class="row">
+            <div class="col">
+                <div class="cs-card cs-bg-cyan">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-pink">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-purple">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-violet">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-green">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-yellow">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-orange">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-red">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-grey">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-light-grey">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-dark-grey">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr />
+
+    <section>
         <h2>Card Status</h2>
 
         <div class="row">
@@ -170,21 +233,21 @@
 
         <div>
             <h4>Sizes</h4>
-            <span class="cs-text-10">10px</span>
-            <span class="cs-text-12">12px</span>
-            <span class="cs-text-14">14px</span>
-            <span class="cs-text-16">16px</span>
-            <span class="cs-text-18">18px</span>
-            <span class="cs-text-20">20px</span>
-            <span class="cs-text-22">22px</span>
-            <span class="cs-text-24">24px</span>
-            <span class="cs-text-26">26px</span>
-            <span class="cs-text-30">30px</span>
-            <span class="cs-text-36">36px</span>
-            <span class="cs-text-42">42px</span>
-            <span class="cs-text-50">50px</span>
-            <span class="cs-text-60">60px</span>
             <span class="cs-text-72">72px</span>
+            <span class="cs-text-60">60px</span>
+            <span class="cs-text-50">50px</span>
+            <span class="cs-text-42">42px</span>
+            <span class="cs-text-36">36px</span>
+            <span class="cs-text-30">30px</span>
+            <span class="cs-text-26">26px</span>
+            <span class="cs-text-24">24px</span>
+            <span class="cs-text-22">22px</span>
+            <span class="cs-text-20">20px</span>
+            <span class="cs-text-18">18px</span>
+            <span class="cs-text-16">16px</span>
+            <span class="cs-text-14">14px</span>
+            <span class="cs-text-12">12px</span>
+            <span class="cs-text-10">10px</span>
         </div>
 
         <div>
@@ -201,6 +264,7 @@
             <span class="cs-text-26 cs-text-light-grey">light grey</span>
         </div>
         <div>
+            <p></p>
             <h4>Rainbow</h4>
 
             <p class="cs-text-rainbow">
