horizontal rules & background striped

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,64 @@
                 </div>
             </div>
         </div>
+        <p></p>
+        <div class="row">
+            <div class="col">
+                <div class="cs-card cs-bg-cyan cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-pink cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-purple cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-violet cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-green cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-yellow cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-orange cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-red cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-grey cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-light-grey cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+            <div class="col">
+                <div class="cs-card cs-bg-dark-grey cs-striped">
+                    &nbsp;
+                </div>
+            </div>
+        </div>
     </section>
     <hr />
 
@@ -285,6 +343,23 @@
     </section>
     <hr />
 
+    <section>
+        <h2>Horizontal Rule</h2>
+
+        <div>
+            <hr class="cs-hr-cyan" />
+            <hr class="cs-hr-pink" />
+            <hr class="cs-hr-purple" />
+            <hr class="cs-hr-violet" />
+            <hr class="cs-hr-green" />
+            <hr class="cs-hr-yellow" />
+            <hr class="cs-hr-orange" />
+            <hr class="cs-hr-red" />
+            <hr class="cs-hr-grey" />
+            <hr class="cs-hr-light-grey" />
+            <hr class="cs-hr-dark-grey" />
+        </div>
+    </section>
 </body>
 
 <footer>
