--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,7 @@
             <div class="col">
                 <div class="cs-card-status">
                     <div class="cs-card cs-bg-cyan">
-                        Options
+                        <br />
                         <table class="table table-sm table-condensed">
                             <tbody>
                                 <tr>
@@ -280,6 +280,114 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <hr />
+
+    <section>
+        <h2>Horizontal Rule</h2>
+
+        <div>
+            <hr class="cs-hr-cyan" />
+            <hr class="cs-hr-pink" />
+            <hr class="cs-hr-purple" />
+            <hr class="cs-hr-violet" />
+            <hr class="cs-hr-green" />
+            <hr class="cs-hr-yellow" />
+            <hr class="cs-hr-orange" />
+            <hr class="cs-hr-red" />
+            <hr class="cs-hr-grey" />
+            <hr class="cs-hr-light-grey" />
+            <hr class="cs-hr-dark-grey" />
+        </div>
+    </section>
+    <hr />
+
+    <section>
+        <h2>Tables</h2>
+
+        <div>
+            <table class="table table-sm table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>Head</th>
+                        <th>Body</th>
+                        <th>%</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <table class="table table-sm table-hover">
+                <thead>
+                    <tr>
+                        <th>
+                            <i class="fa fa-home"></i>
+                            Head
+                        </th>
+                        <th>Body</th>
+                        <th>%</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr class="cs-bg-green">
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr class="cs-bg-red cs-striped">
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                    <tr>
+                        <td>Nostradame</td>
+                        <td>Drum & Bass</td>
+                        <td>12.56</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </section>
     <hr />
@@ -341,25 +449,7 @@
             </p>
         </div>
     </section>
-    <hr />
 
-    <section>
-        <h2>Horizontal Rule</h2>
-
-        <div>
-            <hr class="cs-hr-cyan" />
-            <hr class="cs-hr-pink" />
-            <hr class="cs-hr-purple" />
-            <hr class="cs-hr-violet" />
-            <hr class="cs-hr-green" />
-            <hr class="cs-hr-yellow" />
-            <hr class="cs-hr-orange" />
-            <hr class="cs-hr-red" />
-            <hr class="cs-hr-grey" />
-            <hr class="cs-hr-light-grey" />
-            <hr class="cs-hr-dark-grey" />
-        </div>
-    </section>
 </body>
 
 <footer>
