--- a/src/index.html
+++ b/src/index.html
@@ -33,11 +33,27 @@
             <button class="btn btn-light">Light</button>
             <button class="btn btn-link">Link</button>
         </div>
+        <div class="cs-code">
+            <p>&lt;button class="btn btn-primary">Primary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-secondary">Secondary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-success">Success&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-danger">Danger&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-warning">Warning&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-info">Info&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-dark">Dark&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-light">Light&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-link">Link&lt;/button&gt;</p>
+        </div>
         <div>
             <h4>Sizes</h4>
             <button class="btn btn-sm btn-primary">Primary</button>
             <button class="btn btn-primary">Primary</button>
             <button class="btn btn-lg btn-primary">Primary</button>
+        </div>
+        <div class="cs-code">
+            <p>&lt;button class="btn btn-sm btn-primary">Primary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn btn-primary">Primary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-lg btn-primary">Primary&lt;/button&gt;</p>
         </div>
         <div>
             <h4>Outline</h4>
@@ -50,6 +66,16 @@
             <button class="btn btn-outline-dark">Dark</button>
             <button class="btn btn-outline-light">Light</button>
         </div>
+        <div class="cs-code">
+            <p>&lt;button class="btn btn-outline-primary">Primary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-secondary">Secondary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-success">Success&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-danger">Danger&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-warning">Warning&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-info">Info&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-dark">Dark&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-outline-light">Light&lt;/button&gt;</p>
+        </div>
         <div>
             <h4>Striped</h4>
             <button class="btn btn-primary cs-striped">Primary</button>
@@ -60,6 +86,16 @@
             <button class="btn btn-info cs-striped">Info</button>
             <button class="btn btn-dark cs-striped">Dark</button>
             <button class="btn btn-light cs-striped">Light</button>
+        </div>
+        <div class="cs-code">
+            <p>&lt;button class="btn btn-primary cs-striped">Primary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-secondary cs-striped">Secondary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-success cs-striped">Success&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-danger cs-striped">Danger&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-warning cs-striped">Warning&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-info cs-striped">Info&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-dark cs-striped">Dark&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-light cs-striped">Light&lt;/button&gt;</p>
         </div>
         <div>
             <h4>Disabled</h4>
@@ -72,6 +108,17 @@
             <button class="btn btn-dark" disabled>Dark</button>
             <button class="btn btn-light" disabled>Light</button>
             <button class="btn btn-link" disabled>Link</button>
+        </div>
+        <div class="cs-code">
+            <p>&lt;button class="btn btn-primary" disabled>Primary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-secondary" disabled>Secondary&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-success" disabled>Success&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-danger" disabled>Danger&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-warning" disabled>Warning&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-info" disabled>Info&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-dark" disabled>Dark&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-light" disabled>Light&lt;/button&gt;</p>
+            <p>&lt;button class="btn btn-link" disabled>Link&lt;/button&gt;</p>
         </div>
 
     </section>
@@ -137,6 +184,19 @@
                 </div>
             </div>
         </div>
+        <div class="cs-code">
+            <p>&lt;div class="cs-card cs-bg-cyan"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-pink"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-purple"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-violet"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-green"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-yellow"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-orange"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-red"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-grey"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-light-grey"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-dark-grey"&gt;&lt;/div&gt;</p>
+        </div>
         <p></p>
         <div class="row">
             <div class="col">
@@ -195,6 +255,19 @@
                 </div>
             </div>
         </div>
+        <div class="cs-code">
+            <p>&lt;div class="cs-card cs-bg-cyan cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-pink cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-purple cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-violet cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-green cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-yellow cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-orange cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-red cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-grey cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-light-grey cs-striped"&gt;&lt;/div&gt;</p>
+            <p>&lt;div class="cs-card cs-bg-dark-grey cs-striped"&gt;&lt;/div&gt;</p>
+        </div>
     </section>
     <hr />
 
@@ -207,11 +280,11 @@
                     <div class="cs-card cs-bg-cyan">
                         <b>Title</b>
                         <hr />
-                        <p class="text-center">
+                        <div class="text-center">
                             <button class="btn btn-lg btn-outline-primary cs-outline-inverse">
                                 Go <i class="fa fa-chevron-right"></i>
                             </button>
-                        </p>
+                        </div>
                     </div>
                     <div class="cs-card text-center">
                         <h2>325,00
@@ -281,6 +354,27 @@
                 </div>
             </div>
         </div>
+        <div class="cs-code">
+            <p>&lt;div class="cs-card-status"&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; &lt;div class="cs-card cs-bg-cyan"&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;b&gt;Title&lt;/b&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;hr /&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;div class="text-center"&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;button class="btn btn-lg
+                btn-outline-primary cs-outline-inverse"&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Go &lt;i
+                class="fa fa-chevron-right"&gt;&lt;/i&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/button&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/div&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; &lt;/div&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; &lt;div class="cs-card text-center"&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;h2&gt;325,00 &lt;small&gt;$&lt;/small&gt;&lt;/h2&gt;
+            </p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;p&gt; May-30-2020 &lt;/p&gt;</p>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp; &lt;/div&gt;</p>
+            <p>&lt;/div&gt;</p>
+        </div>
+        </div>
     </section>
     <hr />
 
@@ -300,6 +394,19 @@
             <hr class="cs-hr-light-grey" />
             <hr class="cs-hr-dark-grey" />
         </div>
+        <div class="cs-code">
+            <p>&lt;hr class="cs-hr-cyan" /&gt;</p>
+            <p>&lt;hr class="cs-hr-pink" /&gt;</p>
+            <p>&lt;hr class="cs-hr-purple" /&gt;</p>
+            <p>&lt;hr class="cs-hr-violet" /&gt;</p>
+            <p>&lt;hr class="cs-hr-green" /&gt;</p>
+            <p>&lt;hr class="cs-hr-yellow" /&gt;</p>
+            <p>&lt;hr class="cs-hr-orange" /&gt;</p>
+            <p>&lt;hr class="cs-hr-red" /&gt;</p>
+            <p>&lt;hr class="cs-hr-grey" /&gt;</p>
+            <p>&lt;hr class="cs-hr-light-grey" /&gt;</p>
+            <p>&lt;hr class="cs-hr-dark-grey" /&gt;</p>
+        </div>
     </section>
     <hr />
 
@@ -317,22 +424,22 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
@@ -352,37 +459,37 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr class="cs-bg-green">
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr class="cs-bg-red cs-striped">
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
                     <tr>
-                        <td>Nostradame</td>
+                        <td>Notre Dame</td>
                         <td>Drum & Bass</td>
                         <td>12.56</td>
                     </tr>
@@ -415,19 +522,50 @@
             <span class="cs-text-12">12px</span>
             <span class="cs-text-10">10px</span>
         </div>
+        <div class="cs-code">
+            <p>&lt;span class="cs-text-72">72px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-60">60px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-50">50px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-42">42px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-36">36px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-30">30px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-26">26px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-24">24px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-22">22px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-20">20px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-18">18px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-16">16px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-14">14px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-12">12px&lt;/span&gt;</p>
+            <p>&lt;span class="cs-text-10">10px&lt;/span&gt;</p>
+        </div>
 
         <div>
             <h4>Colors</h4>
-            <span class="cs-text-26 cs-text-cyan">cyan</span>
-            <span class="cs-text-26 cs-text-pink">pink</span>
-            <span class="cs-text-26 cs-text-purple">purple</span>
-            <span class="cs-text-26 cs-text-violet">violet</span>
-            <span class="cs-text-26 cs-text-green">green</span>
-            <span class="cs-text-26 cs-text-yellow">yellow</span>
-            <span class="cs-text-26 cs-text-orange">orange</span>
-            <span class="cs-text-26 cs-text-red">red</span>
-            <span class="cs-text-26 cs-text-grey">grey</span>
-            <span class="cs-text-26 cs-text-light-grey">light grey</span>
+            <p class="cs-text-26">
+                <span class="cs-text-cyan">cyan</span>,
+                <span class="cs-text-pink">pink</span>,
+                <span class="cs-text-purple">purple</span>,
+                <span class="cs-text-violet">violet</span>,
+                <span class="cs-text-green">green</span>,
+                <span class="cs-text-yellow">yellow</span>,
+                <span class="cs-text-orange">orange</span>,
+                <span class="cs-text-red">red</span>,
+                <span class="cs-text-grey">grey</span> and
+                <span class="cs-text-light-grey">light grey</span>
+            </p>
+        </div>
+        <div class="cs-code">
+            <p>&lt;span class="cs-text-cyan"&gt;cyan&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-pink"&gt;pink&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-purple"&gt;purple&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-violet"&gt;violet&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-green"&gt;green&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-yellow"&gt;yellow&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-orange"&gt;orange&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-red"&gt;red&lt;/span&gt;,</p>
+            <p>&lt;span class="cs-text-grey"&gt;grey&lt;/span&gt; and</p>
+            <p>&lt;span class="cs-text-light-grey"&gt;light grey&lt;/span&gt;</p>
         </div>
         <div>
             <p></p>
@@ -448,11 +586,16 @@
                 deserunt laborum veniam nostrum libero!
             </p>
         </div>
+        <div class="cs-code">
+            <p>&lt;p class="cs-text-rainbow"&gt;</p>
+            <p>
+                &nbsp;&nbsp;&nbsp;&nbsp;Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis repudiandae
+                exercitationem at doloremque architecto tempore numquam nisi iusto dolore voluptatem doloribus corporis,
+                vel ab odit deserunt laborum veniam nostrum libero!
+            </p>
+            <p>&lt;/p&gt;</p>
+        </div>
     </section>
-
 </body>
-
-<footer>
-</footer>
 
 </html>
