--- a/src/index.html
+++ b/src/index.html
@@ -379,6 +379,246 @@
     <hr />
 
     <section>
+        <h2>Fieldset</h2>
+
+        <div>
+            <fieldset class="cs-fieldset cs-fieldset-cyan">
+                <legend class="cs-legend"><i class="fa fa-home"></i> Login Page</legend>
+                <div class="row">
+                    <div class="col-1"></div>
+                    <div class="col">
+                        <form class="form container">
+                            <div class="form-group">
+                                <label>Username</label>
+                                <input type="email" class="form-control" placeholder="username@mail.com" />
+                            </div>
+                            <div class="form-group">
+                                <label>Password</label>
+                                <input type="password" class="form-control" placeholder="your password" />
+                            </div>
+                            <div class="form-group text-center">
+                                <button type="submit" class="btn btn-outline-success">
+                                    Sign in
+                                    <i class="fa fa-arrow-right"></i>
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-1"></div>
+                </div>
+            </fieldset>
+
+            <div class="row">
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-cyan">
+                        <legend class="cs-legend cs-legend-bordered">Title</legend>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-outline-danger">
+                                <i class="fa fa-arrow-left"></i>
+                                Logout
+                            </button>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-cyan">
+                        <legend class="cs-legend cs-legend-border-top">Title</legend>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-outline-danger">
+                                <i class="fa fa-arrow-left"></i>
+                                Logout
+                            </button>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-cyan">
+                        <legend class="cs-legend cs-legend-border-bottom">Title</legend>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-outline-danger">
+                                <i class="fa fa-arrow-left"></i>
+                                Logout
+                            </button>
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <h4>Colors</h4>
+            <div class="row">
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-pink">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-pink">
+                            pink
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-purple">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-purple">
+                            purple
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-violet">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-violet">
+                            violet
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-green">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-green">
+                            green
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-yellow">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-yellow">
+                            yellow
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-orange">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-orange">
+                            orange
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-red">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-red">
+                            red
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-grey">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-grey">
+                            grey
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-light-grey">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-light-grey cs-text-14">
+                            light grey
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-dark-grey">
+                        <legend>x</legend>
+                        <div class="text-center cs-text-dark-grey cs-text-14">
+                            dark grey
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-pink">x</legend>
+                        <div class="text-center cs-text-pink">
+                            pink
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-purple">x</legend>
+                        <div class="text-center cs-text-purple">
+                            purple
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-violet">x</legend>
+                        <div class="text-center cs-text-violet">
+                            violet
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend  class="cs-text-green">x</legend>
+                        <div class="text-center cs-text-green">
+                            green
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-yellow">x</legend>
+                        <div class="text-center cs-text-yellow">
+                            yellow
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-orange">x</legend>
+                        <div class="text-center cs-text-orange">
+                            orange
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-red">x</legend>
+                        <div class="text-center cs-text-red">
+                            red
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend  class="cs-text-grey">x</legend>
+                        <div class="text-center cs-text-grey">
+                            grey
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-light-grey">x</legend>
+                        <div class="text-center cs-text-light-grey cs-text-14">
+                            light grey
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset">
+                        <legend class="cs-text-dark-grey">x</legend>
+                        <div class="text-center cs-text-dark-grey cs-text-14">
+                            dark grey
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr />
+
+    <section>
         <h2>Horizontal Rule</h2>
 
         <div>
