margin-top :: Fieldset

--- a/src/index.html
+++ b/src/index.html
@@ -408,10 +408,22 @@
                 </div>
             </fieldset>
 
+            <h4>Borders</h4>
             <div class="row">
                 <div class="col">
                     <fieldset class="cs-fieldset cs-fieldset-cyan">
-                        <legend class="cs-legend cs-legend-bordered">Title</legend>
+                        <legend class="cs-legend">no border</legend>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-outline-danger">
+                                <i class="fa fa-arrow-left"></i>
+                                Logout
+                            </button>
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-cyan">
+                        <legend class="cs-legend cs-legend-bordered">bordered</legend>
                         <div class="text-center">
                             <button type="submit" class="btn btn-outline-danger">
                                 <i class="fa fa-arrow-left"></i>
@@ -423,7 +435,7 @@
 
                 <div class="col">
                     <fieldset class="cs-fieldset cs-fieldset-cyan">
-                        <legend class="cs-legend cs-legend-border-top">Title</legend>
+                        <legend class="cs-legend cs-legend-border-top">top</legend>
                         <div class="text-center">
                             <button type="submit" class="btn btn-outline-danger">
                                 <i class="fa fa-arrow-left"></i>
@@ -435,7 +447,7 @@
 
                 <div class="col">
                     <fieldset class="cs-fieldset cs-fieldset-cyan">
-                        <legend class="cs-legend cs-legend-border-bottom">Title</legend>
+                        <legend class="cs-legend cs-legend-border-bottom">bottom</legend>
                         <div class="text-center">
                             <button type="submit" class="btn btn-outline-danger">
                                 <i class="fa fa-arrow-left"></i>
