--- a/src/index.html
+++ b/src/index.html
@@ -411,6 +411,17 @@
             <h4>Borders</h4>
             <div class="row">
                 <div class="col">
+                    <fieldset class="cs-fieldset cs-fieldset-no-border">
+                        <legend class="cs-legend">no border</legend>
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-outline-danger">
+                                <i class="fa fa-arrow-left"></i>
+                                Logout
+                            </button>
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col">
                     <fieldset class="cs-fieldset cs-fieldset-cyan">
                         <legend class="cs-legend">no border</legend>
                         <div class="text-center">
