--- a/src/index.html
+++ b/src/index.html
@@ -312,6 +312,16 @@
         <hr />
 
         <section>
+            <h2>Badges</h2>
+            <div>
+                <span class="cs-badge-green cs-text-12 font-weight-bold">
+                    <i class="fa fa-check"></i>    finalizado 
+                </span>
+            </div>
+        </section>
+        <hr />
+
+        <section>
             <h2>Cards</h2>
             <div class="row">
                 <div class="col">
