--- a/src/index.html
+++ b/src/index.html
@@ -160,6 +160,17 @@
                 <p>&lt;button class="btn btn-light" disabled>Light&lt;/button&gt;</p>
                 <p>&lt;button class="btn btn-link" disabled>Link&lt;/button&gt;</p>
             </div>
+            <div>
+                <h4>Circle</h4>
+                <button class="btn btn-primary cs-circle">Primary</button>
+                <button class="btn btn-secondary cs-circle">Secondary</button>
+                <button class="btn btn-success cs-circle">Success</button>
+                <button class="btn btn-danger cs-circle">Danger</button>
+                <button class="btn btn-warning cs-circle">Warning</button>
+                <button class="btn btn-info cs-circle">Info</button>
+                <button class="btn btn-dark cs-circle">Dark</button>
+                <button class="btn btn-light cs-circle">Light</button>
+            </div>
 
         </section>
         <hr />
