--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../dist/css/conscientstyle.min.css">
+        <!-- <link rel="stylesheet" href="../dist/css/conscientstyle-dark.min.css"> -->
+        <link rel="stylesheet" href="../dist/css/conscientstyle-light.min.css">
     <script src="../dist/js/conscientstyle.min.js"></script>
     <style>
         section>div {
